--- a/01-LinearRegression.ipynb
+++ b/01-LinearRegression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e8cc9b6c",
+   "id": "2e61f8fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2400e021",
+   "id": "d7337de2",
    "metadata": {},
    "source": [
     "### Data"
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2ae159a9",
+   "execution_count": 47,
+   "id": "e4e3d78b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "usaHousing = pd.read_csv('USA_Housing.csv')"
+    "usaHousing = pd.read_csv('data/USA_Housing.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "8e81a67e",
+   "execution_count": 48,
+   "id": "236eae8b",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4                         USNS Raymond\\nFPO AE 09386  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3d540b2d",
+   "id": "5096366b",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a588dfb0",
+   "id": "dc8891a2",
    "metadata": {},
    "source": [
     "### EDA"
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7a34f248",
+   "id": "f3e8bb5b",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "704a82b5",
+   "id": "25ce6029",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2f6b9d9a",
+   "id": "9862c9ae",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e7bb9d05",
+   "id": "db4b8c46",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c059dafd",
+   "id": "37a98d68",
    "metadata": {},
    "source": [
     "### Train Model"
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fc36bda7",
+   "id": "414a44e0",
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "90d8b12d",
+   "id": "b557f2e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "40d521b2",
+   "id": "f5315520",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6045a902",
+   "id": "e6dcee3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8e121990",
+   "id": "15667180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2cdb4e6f",
+   "id": "08a1db84",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "65314d09",
+   "id": "56fa6575",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "94eab1f4",
+   "id": "cf99c18e",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2b129623",
+   "id": "b5885464",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a30bbce4",
+   "id": "eef50ebe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d09ede1b",
+   "id": "55131825",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2baf23b1",
+   "id": "7cb42168",
    "metadata": {},
    "outputs": [],
    "source": []
